<resources>
    <string name="app_name">Horse Riding</string>
    <string name="horse_name">Horse Name</string>
    <string name="horse_weight">Horse Weight:</string>
    <string name="_300_kg">300 kg</string>
    <string name="come_back_with_your_id">Come back with your ID</string>
    <string name="for_easy_fast_and_secure_login">For easy , fast and secure login</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="pan_number">Pan Number</string>
    <string name="enter_aadhar_number">Enter Aadhar number</string>
    <string name="enter_pan_number">Enter Pan Number</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="kyc_information">KYC Information</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="first_name">First Name : </string>
    <string name="welcome_to_horse_riding_app">WelCome to Horse Riding App</string>
    <string name="enter_text">Enter text</string>
    <string name="or">OR</string>
    <string name="user_id">User ID :</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="profile_edit">Edit Profile Information</string>
    <string name="horse_height">"Horse Height:</string>
    <string name="description">Description</string>
    <string name="eight_ft">8.4ft</string>
    <string name="Continue">Continue</string>
    <string name="location">Location</string>
    <string name="Password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="my_password">Enter Password</string>
    <string name="my_email">Enter User ID</string>
    <string name="account_number">Account Number</string>
    <string name="d_o_b">Date of Birth</string>
    <string name="you_have_already_account">You have already account?</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_account">My Account</string>
    <string name="user_first_name">User First Name</string>
    <string name="user_last_name">User Last Name</string>
    <string name="user_mobile_number">User Mobile Number</string>
    <string name="other_information">Other Information</string>
    <string name="user_location">User Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="user_id_hint">User Id</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="stable">Stable</string>
    <string name="wallet">Wallet</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="add_amount">Add Amount :</string>
    <string name="recieve">Recieve</string>
    <string name="swap">Swap</string>
    <string name="_200_00_usd">200.00 USD</string>
    <string name="tokens_balance">Tokens Balance</string>
    <string name="send">Send</string>
    <string name="_00_00">00.00</string>
    <string name="add_payment_button">Add Payment</string>
    <string name="_500">$500</string>
    <string name="next_button">next</string>
    <string name="intrest_rate">Our Stock Price</string>


</resources>