<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="7dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_horse"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/round_shape"
                android:contentDescription="@string/description"
                android:scaleType="centerCrop"
                android:src="@drawable/jumping_horse_dark_blue" />

            <TextView
                android:id="@+id/tv_horse_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/horse_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/horse_weight"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_horse_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/_300_kg"
                    android:textColor="@color/dark_blue"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/horse_height"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_horse_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/eight_ft"
                    android:textColor="@color/dark_blue"
                    android:textSize="13sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="20sp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/description"
                android:textColor="@color/dark_pink"
                android:textSize="13sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
