<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cardview"
        app:cardCornerRadius="10dp"
        android:elevation="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_cardview"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/font_demo"
                android:text="@string/kyc_information"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/aadhar_number"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/enter_aadhar_number"
                android:layout_margin="10dp"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="15sp"
                style="@style/NeumorphicViewStyleRegistration"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/pan_number"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:textColorHint="@color/black"
                android:hint="@string/enter_pan_number"
                android:textSize="15sp"
                android:paddingHorizontal="20dp"
                android:fontFamily="@font/poppins_medium"
                style="@style/NeumorphicViewStyleRegistration"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Account Number"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                style="@style/NeumorphicViewStyleRegistration"
                android:textColorHint="@color/black"
                android:hint="@string/enter_account_number"
                android:paddingHorizontal="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/date_of_birth"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:textColorHint="@color/black"
                android:hint="Date-of-Birth"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                style="@style/NeumorphicViewStyleRegistration"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btn_continue"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                style="@style/NeumorphicViewStyleRegistration"
                android:text="Continue"
                android:textColor="@color/black" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>