<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_navigation"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/change_your_password"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/et_change_password"
            style="@style/NeumorphicViewStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/Password"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@color/white"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/NeumorphicViewStyle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/tv_change_password"
            style="@style/NeumorphicViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:textSize="10dp"
            android:paddingHorizontal="15sp"
            android:paddingVertical="10sp"
            android:text="@string/change_your_password"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>